--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ background-image: url("https://images.unsplash.com/photo-1511415932124-42efedd2e
 background-size: cover;
 background-repeat: no-repeat;
 font-family: 'Secular One', sans-serif;
+height: 100vh;
 }
 .navbar-list {
     list-style: none;
@@ -67,7 +68,6 @@ height: 40rem;
     color: #28CC9E;
     font-size: 2.5rem;
     font-weight: bolder;
-    /* text-align: end; */
     margin-right: 10%;
 }
   .home-about-text {
@@ -78,7 +78,7 @@ height: 40rem;
     padding: 1rem;
   }
 
-  .grapics-cards-container, .processors-container, .motherboards-container {
+  .items-container {
     display: flex;
     flex-direction: column;
     gap: 4rem;
@@ -138,4 +138,18 @@ font-size: 3rem;
   .shop-header-shopCart-value-indicator {
     text-align: center;
     margin: 0;
+  }
+
+
+
+
+  .main-shop-items-container{
+    height: 700px;
+    overflow: hidden;
+  }
+
+
+  .shop-header-logo{
+    width: 40px;
+    height: 40px;
   }
