--- a/src/App.css
+++ b/src/App.css
@@ -1,186 +1,228 @@
-@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-.shop-container, .home-container {
-background-image: url("https://images.unsplash.com/photo-1511415932124-42efedd2eacf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80");
-background-size: cover;
-background-repeat: no-repeat;
-font-family: 'Secular One', sans-serif;
-height: 100vh;
-position: relative;
+.shop-container,
+.home-container {
+  background-image: url("https://images.unsplash.com/photo-1511415932124-42efedd2eacf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80");
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: "Secular One", sans-serif;
+  height: 100vh;
+  position: relative;
 }
 .navbar-list {
-    list-style: none;
-    display: flex;
-    gap: 5rem;
+  list-style: none;
+  display: flex;
+  gap: 5rem;
 }
 .navbar-list > * {
-    padding: 1rem 3rem;
-    font-weight: bolder;
-    border: 1px solid #28CC9E;
+  padding: 1rem 3rem;
+  font-weight: bolder;
+  border: 1px solid #28cc9e;
 }
 .navbar-list > *:hover {
-    background-color: rgba(40, 204, 158, 0.157);
+  background-color: rgba(40, 204, 158, 0.157);
 }
 
 a:link {
-    text-decoration: none;
-    color: rgb(40, 204, 158);
+  text-decoration: none;
+  color: rgb(40, 204, 158);
+}
 
-  }
-  
-  a:visited {
-    text-decoration: none;
-    color: #28CC9E;
-  }
+a:visited {
+  text-decoration: none;
+  color: #28cc9e;
+}
 .home-container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.home-contents{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.473);
-    padding-top: 5%;
+.home-contents {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.473);
+  padding-top: 5%;
 }
-.home-contents-right{
-    display: flex;
-flex-direction: column;
-align-items: center;
-gap: 3rem;
+.home-contents-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
 }
-  .home-logo{
-height: 40rem;
-  }
+.home-logo {
+  height: 40rem;
+}
 
-.home-about-container{
-    width: 50rem;
+.home-about-container {
+  width: 50rem;
 }
-.home-about-header{
-    color: #28CC9E;
-    font-size: 2.5rem;
-    font-weight: bolder;
-    margin-right: 10%;
+.home-about-header {
+  color: #28cc9e;
+  font-size: 2.5rem;
+  font-weight: bolder;
+  margin-right: 10%;
 }
-  .home-about-text {
-    
-    font-size: 1.5rem;
-    color: white;
-    padding: 1rem;
-  }
+.home-about-text {
+  font-size: 1.5rem;
+  color: white;
+  padding: 1rem;
+}
 
 .shop-header {
-display: flex;
-gap: 3rem;
-align-items: center;
+  display: flex;
+  gap: 3rem;
+  align-items: center;
 }
-  .shop-header-logo {
-    width: 12rem;
-    margin-left: 1rem;
-  }
+.shop-header-logo {
+  width: 12rem;
+  margin-left: 1rem;
+}
 
-  .shopCart-container{
-    position: absolute;
-    right: 2rem;
-    top: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border: 3px solid #28CC9E;
-    border-radius: 10%;
-    width: 6rem;
-    height: 6rem;
-    padding: 1rem;
-    color: white
-  }
-  .shopCart-container:hover {
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.692);
-  }
+.shopCart-container {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 3px solid #28cc9e;
+  border-radius: 10%;
+  width: 6rem;
+  height: 6rem;
+  padding: 1rem;
+  color: white;
+}
+.shopCart-container:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.692);
+}
 
-  .shopping-cart-indicator-icon{
-    font-size: 3rem;
+.shopping-cart-indicator-icon {
+  font-size: 3rem;
+}
+.shopCart-number-indicator {
+  position: absolute;
+  box-sizing: border-box;
+  background-color: #28cc9e;
+  padding: 6px;
+  width: 2rem;
+  height: 2rem;
+  text-align: center;
+  box-shadow: rgb(255 255 255) 0px 0px 0px 2px;
+  border-radius: 50%;
+  right: 2rem;
+  top: 1rem;
+}
 
-  }
-  .shopCart-number-indicator{
-    position: absolute;
-    box-sizing:border-box;
-    background-color: #28CC9E;
-    padding: 6px;
-    width: 2rem;
-    height: 2rem;
-    text-align: center;
-    box-shadow: rgb(255 255 255) 0px 0px 0px 2px;
-    border-radius: 50%;
-    right: 2rem;
-    top: 1rem;
-  }
+.shopCart-value-indicator {
+  text-align: center;
+  margin: 0;
+}
 
-  .shopCart-value-indicator {
-    text-align: center;
-    margin: 0;
-  }
+.items-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 4rem;
+}
 
-  .items-container {
-    display: grid;
-    grid-template: 1fr / 1fr 1fr 1fr 1fr;
-    gap: 4rem;
-  }
-  .card {
-    background-color: white;
-    width: 70rem;
-    display: flex;
-    flex-direction: column;
-    width: 20rem;
-    padding: 1rem;
-    border-radius: 5%;
-  }
-  .item-img{
-    height:30% ;
-    object-fit: contain;
-    
-  }
-  .card > ul {
-    list-style: none;
-  }
-  .quantinity-indicator{
-    display: inline-block;
-  }
+.shop-items-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  height: 75%;
+  overflow: auto;
+  margin: auto;
+  gap: 4rem;
+  padding: 0 1rem;
+}
 
-  .shop-items-container {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    height: 75%;
-    overflow: auto;
-    margin: auto;
-    gap: 4rem;
-  }
+.shop-items-container::-webkit-scrollbar {
+  width: 12px;
+}
 
-  .shop-items-container::-webkit-scrollbar {
-    width: 12px;
-  }
-  
-  .shop-items-container::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.616);
-    border-radius: 20px;
-  }
-  
-  .shop-items-container::-webkit-scrollbar-thumb {
-    background-color: #28CC9E;
-    border-radius: 20px;
-  }
+.shop-items-container::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.616);
+  border-radius: 20px;
+}
+
+.shop-items-container::-webkit-scrollbar-thumb {
+  background-color: #28cc9e;
+  border-radius: 20px;
+}
+
+.card {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+.item-img {
+  height: 30%;
+  object-fit: contain;
+  margin-bottom: 2rem;
+}
+.card > ul {
+  list-style: none;
+}
+.quantinity-indicator {
+  display: inline-block;
+}
+
+.item-title {
+  margin: 1rem 0;
+  border-bottom: 2px solid #28cc9e;
+  text-align: center;
+}
+.item-price {
+  margin: 1rem 0;
+  text-align: center;
+  font-size: 1.5rem;
+  background-color: #28cc9e;
+}
+
+.item-properties > * {
+  margin-top: 1rem;
+}
+.item-card-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+#item-quantinity-input {
+  width: 4rem;
+  height: 3rem;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bolder;
+}
+.item-card-form-btn {
+  margin: 0.5rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+}
+.item-card-form-btn-add {
+  width: 3rem;
+  height: 3rem;
+  background-color: #28cc9e;
+  border: 1px solid;
+  font-size: 1rem;
+  cursor: pointer;
+}
 
 .shoppingCart {
   height: 70%;
@@ -194,26 +236,22 @@ align-items: center;
   height: 4rem;
   margin: 0 8rem 0 8rem;
   font-weight: bolder;
-  border: 1px solid #28CC9E;
+  border: 1px solid #28cc9e;
   background-color: rgba(0, 0, 0, 0);
-  color: #28CC9E;
+  color: #28cc9e;
   font-size: 1.2rem;
   align-self: end;
 }
 
-.shoppingCart > button:hover {
-  background-color: rgba(40, 204, 158, 0.157);
-}
-
-.shoppingCart-container{
-position: relative;
+.shoppingCart-container {
+  position: relative;
   background-color: white;
   width: 60%;
   margin: 2rem auto 0 auto;
   height: 70%;
   border-radius: 20px;
 }
-.ShoppingCart-items-container{
+.shoppingCart-items-container {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -223,7 +261,7 @@ position: relative;
 .shoppingCart-items {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   justify-items: center;
   overflow: auto;
   padding: 1rem;
@@ -239,61 +277,58 @@ position: relative;
 }
 
 .shoppingCart-items::-webkit-scrollbar-thumb {
-  background-color: #28CC9E;
+  background-color: #28cc9e;
   border-radius: 20px;
-
 }
 
 .shoppingCart-total {
-  border-top: 2px solid #28CC9E;
+  border-top: 2px solid #28cc9e;
   width: max-content;
   align-self: flex-end;
-  padding-top: .3rem;
+  padding-top: 0.3rem;
   margin-right: 1rem;
 }
 
-.shoppingCart-item-card{
+.shoppingCart-item-card {
   display: flex;
   height: 5rem;
-  border: 2px solid #28CC9E;
+  border: 2px solid #28cc9e;
   align-items: center;
-padding: .5rem;
+  padding: 0.5rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-.shoppingCart-item-img{
+.shoppingCart-item-img {
   height: 100%;
   object-fit: contain;
   margin-right: 1rem;
 }
-.shoppingCart-item-info{
+.shoppingCart-item-info {
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
-.shoppingCart-item-info-btn{
-padding: .1rem;
+.shoppingCart-item-info-btn {
+  padding: 0.1rem;
 }
 
-.shoppingCart-item-info-btn:hover{
-cursor: pointer;
+.shoppingCart-item-info-btn:hover {
+  cursor: pointer;
 }
 
-.shoppingCart-item-info-btn-icon {
+.shoppingCart-item-info-btn-icon,
+.item-card-btn-icon {
   pointer-events: none;
 }
 
 .shoppingCart-item-info > form {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   justify-self: flex-end;
 }
 
-
-
-.shoppingCart-total{
+.shoppingCart-total {
   display: flex;
   justify-content: flex-end;
 }
-
-
-
