--- a/src/App.css
+++ b/src/App.css
@@ -278,6 +278,10 @@ a:visited {
   padding: 1rem;
 }
 
+.shoppingCart-items-container > h3 {
+  margin-bottom: 1rem;
+}
+
 .shoppingCart-items {
   display: flex;
   flex-direction: column;
