--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@ a:visited {
   height: 6rem;
   padding: 1rem;
   color: white;
+  background-color: rgba(0, 0, 0, 0.281);
 }
 
 .shopCart-container:hover {
@@ -127,11 +128,11 @@ a:visited {
   box-sizing: border-box;
   background-color: #28cc9e;
   padding: 6px;
-  width: 2rem;
+  width: max-content;
   height: 2rem;
   text-align: center;
   box-shadow: rgb(255 255 255) 0px 0px 0px 2px;
-  border-radius: 50%;
+  border-radius: 50px;
   right: 2rem;
   top: 1rem;
 }
