--- a/src/App.css
+++ b/src/App.css
@@ -221,7 +221,8 @@ a:visited {
 }
 
 #item-quantinity-input {
-  width: 4rem;
+  display: inline-block;
+  max-width: 6rem;
   height: 3rem;
   text-align: center;
   font-size: 1rem;
@@ -268,7 +269,7 @@ a:visited {
   background-color: white;
   width: 60%;
   margin: 2rem auto 0 auto;
-  height: 70%;
+  height: 80%;
   border-radius: 20px;
 }
 
@@ -282,11 +283,19 @@ a:visited {
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding: 1rem;
+
 }
 
 .shoppingCart-items-container > h3 {
   margin-bottom: 1rem;
+  padding: .5rem;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  text-align: center;
+  background-color: #28cc9e;
+}
+.shoppingCart-container-footer {
+  margin-top: 2rem;
 }
 
 .shoppingCart-items {
@@ -295,7 +304,7 @@ a:visited {
   gap: 1.5rem;
   justify-items: center;
   overflow: auto;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .shoppingCart-items::-webkit-scrollbar {
@@ -364,4 +373,19 @@ a:visited {
 .shoppingCart-total {
   display: flex;
   justify-content: flex-end;
+}
+
+.git-icon {
+  position: absolute;
+  height: 2rem;
+  transition: transform 0.5s ease-in-out;
+  color: #28cc9e;
+  bottom: 1rem;
+  left: 1rem;
+}
+
+.git-icon:hover {
+  cursor: pointer;
+  transform: rotate(360deg) scale(1.2);
+  color: #0c966f;
 }
