--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,27 @@
   box-sizing: border-box;
 }
 
+:root {
+  --max-width: 1920px
+}
+
+#root {
+  background-image: url("https://images.unsplash.com/photo-1511415932124-42efedd2eacf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+}
+
 .shop-container,
 .home-container {
-  background-image: url("https://images.unsplash.com/photo-1511415932124-42efedd2eacf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80");
   background-size: cover;
   background-repeat: no-repeat;
   font-family: "Secular One", sans-serif;
   height: 100vh;
   position: relative;
+  min-width: 1800px;
+  max-width: 1800px;
 }
 
 .navbar-list {
