--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ a:visited {
   padding-top: 5%;
   opacity: 0;
   animation-name: fadein;
-  animation-duration: 1500ms;
+  animation-duration: 800ms;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
@@ -174,7 +174,7 @@ a:visited {
   gap: 4rem;
   opacity: 0;
   animation-name: fadein;
-  animation-duration: 1500ms;
+  animation-duration: 500ms;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
@@ -328,7 +328,7 @@ transition: color 350ms linear;
   border-radius: 20px;
   opacity: 0;
   animation-name: fadein;
-  animation-duration: 1500ms;
+  animation-duration: 500ms;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
@@ -408,12 +408,32 @@ transition: color 350ms linear;
 
 .shoppingCart-item-card {
   display: flex;
+  cursor: pointer;
   height: 5rem;
   border: 2px solid #28cc9e;
   align-items: center;
   padding: 0.5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  transition: height 300ms ease;
+}
+.shoppingCart-item-card-additional-info {
+  list-style: none;
+  opacity: 0;
+}
+
+.shoppingCart-item-card.expanded {
+  height: 14rem;
+  transition: height 500ms ease;
+}
+
+.shoppingCart-item-card.expanded > .shoppingCart-item-info > .shoppingCart-item-title {
+  width: 20%;
+}
+
+.shoppingCart-item-card-additional-info.expanded {
+  opacity: 1;
+  transition: opacity 1000ms ease;
 }
 
 .shoppingCart-item-img {
@@ -426,6 +446,7 @@ transition: color 350ms linear;
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 
 .shoppingCart-item-info-btn {
